src/parser.output
Grammar

    0 $accept: program $end

    1 program: expr

    2 ident: TIDENTIFIER

    3 integer: TINTEGER

    4 expr: TLPAREN expr TRPAREN
    5     | bexpr
    6     | cexpr

    7 bexpr: ident TCEQ integer
    8      | ident TCNE integer
    9      | ident TCGT integer
   10      | ident TCGE integer
   11      | ident TCLT integer
   12      | ident TCLE integer

   13 cexpr: expr TAND expr
   14      | expr TOR expr


Terminals, with rules where they appear

$end (0) 0
error (256)
TIDENTIFIER (258) 2
TINTEGER (259) 3
TCEQ (260) 7
TCNE (261) 8
TCGT (262) 9
TCGE (263) 10
TCLT (264) 11
TCLE (265) 12
TLPAREN (266) 4
TRPAREN (267) 4
TAND (268) 13
TOR (269) 14


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
program (16)
    on left: 1, on right: 0
ident (17)
    on left: 2, on right: 7 8 9 10 11 12
integer (18)
    on left: 3, on right: 7 8 9 10 11 12
expr (19)
    on left: 4 5 6, on right: 1 4 13 14
bexpr (20)
    on left: 7 8 9 10 11 12, on right: 5
cexpr (21)
    on left: 13 14, on right: 6


state 0

    0 $accept: . program $end

    TIDENTIFIER  shift, and go to state 1
    TLPAREN      shift, and go to state 2

    program  go to state 3
    ident    go to state 4
    expr     go to state 5
    bexpr    go to state 6
    cexpr    go to state 7


state 1

    2 ident: TIDENTIFIER .

    $default  reduce using rule 2 (ident)


state 2

    4 expr: TLPAREN . expr TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TLPAREN      shift, and go to state 2

    ident  go to state 4
    expr   go to state 8
    bexpr  go to state 6
    cexpr  go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 9


state 4

    7 bexpr: ident . TCEQ integer
    8      | ident . TCNE integer
    9      | ident . TCGT integer
   10      | ident . TCGE integer
   11      | ident . TCLT integer
   12      | ident . TCLE integer

    TCEQ  shift, and go to state 10
    TCNE  shift, and go to state 11
    TCGT  shift, and go to state 12
    TCGE  shift, and go to state 13
    TCLT  shift, and go to state 14
    TCLE  shift, and go to state 15


state 5

    1 program: expr .
   13 cexpr: expr . TAND expr
   14      | expr . TOR expr

    TAND  shift, and go to state 16
    TOR   shift, and go to state 17

    $default  reduce using rule 1 (program)


state 6

    5 expr: bexpr .

    $default  reduce using rule 5 (expr)


state 7

    6 expr: cexpr .

    $default  reduce using rule 6 (expr)


state 8

    4 expr: TLPAREN expr . TRPAREN
   13 cexpr: expr . TAND expr
   14      | expr . TOR expr

    TRPAREN  shift, and go to state 18
    TAND     shift, and go to state 16
    TOR      shift, and go to state 17


state 9

    0 $accept: program $end .

    $default  accept


state 10

    7 bexpr: ident TCEQ . integer

    TINTEGER  shift, and go to state 19

    integer  go to state 20


state 11

    8 bexpr: ident TCNE . integer

    TINTEGER  shift, and go to state 19

    integer  go to state 21


state 12

    9 bexpr: ident TCGT . integer

    TINTEGER  shift, and go to state 19

    integer  go to state 22


state 13

   10 bexpr: ident TCGE . integer

    TINTEGER  shift, and go to state 19

    integer  go to state 23


state 14

   11 bexpr: ident TCLT . integer

    TINTEGER  shift, and go to state 19

    integer  go to state 24


state 15

   12 bexpr: ident TCLE . integer

    TINTEGER  shift, and go to state 19

    integer  go to state 25


state 16

   13 cexpr: expr TAND . expr

    TIDENTIFIER  shift, and go to state 1
    TLPAREN      shift, and go to state 2

    ident  go to state 4
    expr   go to state 26
    bexpr  go to state 6
    cexpr  go to state 7


state 17

   14 cexpr: expr TOR . expr

    TIDENTIFIER  shift, and go to state 1
    TLPAREN      shift, and go to state 2

    ident  go to state 4
    expr   go to state 27
    bexpr  go to state 6
    cexpr  go to state 7


state 18

    4 expr: TLPAREN expr TRPAREN .

    $default  reduce using rule 4 (expr)


state 19

    3 integer: TINTEGER .

    $default  reduce using rule 3 (integer)


state 20

    7 bexpr: ident TCEQ integer .

    $default  reduce using rule 7 (bexpr)


state 21

    8 bexpr: ident TCNE integer .

    $default  reduce using rule 8 (bexpr)


state 22

    9 bexpr: ident TCGT integer .

    $default  reduce using rule 9 (bexpr)


state 23

   10 bexpr: ident TCGE integer .

    $default  reduce using rule 10 (bexpr)


state 24

   11 bexpr: ident TCLT integer .

    $default  reduce using rule 11 (bexpr)


state 25

   12 bexpr: ident TCLE integer .

    $default  reduce using rule 12 (bexpr)


state 26

   13 cexpr: expr . TAND expr
   13      | expr TAND expr .
   14      | expr . TOR expr

    $default  reduce using rule 13 (cexpr)


state 27

   13 cexpr: expr . TAND expr
   14      | expr . TOR expr
   14      | expr TOR expr .

    $default  reduce using rule 14 (cexpr)
